Do not suppress pointercancel event when dnd

When long press on a draggable item to start dragging with touch,
we should receive a touchcancel event.
This CL changes it to not suppress pointercancel event when doing
drag and drop.

Bug: 708278
Change-Id: I754cf86dfce37f33164b797edb1f8a05acb82c9b
Reviewed-on: https://chromium-review.googlesource.com/939649
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539917}
Former-commit-id: 34552fa720bd55ae7b87cdb4897477a8a4893e79